--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -3,11 +3,11 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 26
     defaultConfig {
-        applicationId "com.ksenia.pulsezonetrainning"
+        applicationId "com.ksenia.pulsezonetraining"
         minSdkVersion 21
         targetSdkVersion 26
         versionCode 1
-        versionName "1.0"
+        versionName "beating_heart.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -24,7 +24,6 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: '../libs')
-    //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support:support-v4:26.1.0'
     implementation 'com.android.support:design:26.1.0'
@@ -36,5 +35,5 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:15.0.1'
     //implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.android.support:support-compat:26.1.0'
-    implementation 'com.android.support:recyclerview-v7:26.1.0'
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.3'
 }
