--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -2,7 +2,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.ksenia.pulsezonetraining">
 
+    <uses-feature android:name="android.hardware.bluetooth_le" android:required="true"/>
+
+    <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+
 
     <application
         android:allowBackup="true"
@@ -17,6 +23,14 @@
             android:label="@string/app_name"
             android:parentActivityName=".ui.MainActivity"
             android:launchMode="singleTop"
+            android:theme="@style/AppTheme">
+        </activity>
+
+        <activity
+            android:name="com.ksenia.pulsezonetraining.ui.Activity_BluetoothDevices"
+            android:configChanges="orientation|screenSize"
+            android:label="@string/label_bluetooth"
+            android:parentActivityName=".ui.Activity_PulseZonesFitness"
             android:theme="@style/AppTheme"/>
         <activity
             android:name="com.ksenia.pulsezonetraining.ui.Activity_WorkoutStatistics"
