--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -20,12 +20,18 @@
         <activity
             android:name="com.ksenia.pulsezonetraining.ui.Activity_PulseZonesFitness"
             android:configChanges="orientation|screenSize"
-            android:label="@string/app_name"
+            android:label="@string/label_pulsezonefitness"
             android:parentActivityName=".ui.MainActivity"
             android:launchMode="singleTop"
             android:theme="@style/AppTheme">
         </activity>
 
+        <activity
+            android:name="com.ksenia.pulsezonetraining.ui.Activity_MultiDeviceSearchSampler"
+            android:configChanges="orientation|screenSize"
+            android:label="@string/label_multidevice"
+            android:parentActivityName=".ui.Activity_PulseZonesFitness"
+            android:theme="@style/AppTheme"/>
         <activity
             android:name="com.ksenia.pulsezonetraining.ui.Activity_BluetoothDevices"
             android:configChanges="orientation|screenSize"
@@ -35,7 +41,7 @@
         <activity
             android:name="com.ksenia.pulsezonetraining.ui.Activity_WorkoutStatistics"
             android:configChanges="orientation|screenSize"
-            android:label="@string/app_name"
+            android:label="@string/label_workoutstatistics"
             android:parentActivityName=".ui.Activity_PulseZonesFitness"
             android:theme="@style/AppTheme"/>
         <activity
